@@ -135,6 +135,7 @@ Release 0.92.2 - Unreleased
    HBASE-6283  [region_mover.rb] Add option to exclude list of hosts on unload instead of just assuming the source node
    HBASE-5714  Add write permissions check before any hbck run that modifies hdfs (Liang Xie)
    HBASE-6586  Quarantine Corrupted HFiles with Hbck
+   HBASE-5631  hbck should handle cases where .tableinfo is missing (Jie Huang)
 
   NEW FEATURE
    HBASE-5128  [uber hbck] Online automated repair of table integrity and region consistency problems
